--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 
     <main>
       <!-- section1 -->
-      <!-- <section class="section-page-titel">
+      <section class="section-page-titel">
         <div class="hero-titel container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-text">Order Service</button>
         </div>
-      </section> -->
+      </section>
       <!-- section2 -->
-      <!-- <section class="section-two">
+      <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">info</h2>
           <ul class="section-list">
@@ -147,7 +147,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- section3 -->
       <!-- <section class="section-team">
         <div class="container">
@@ -464,7 +464,7 @@
         </div>
       </section> -->
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-info">
           <a href="./index.html" class="logo footerlogo">
@@ -530,8 +530,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <!-- Контейнер для модального вікна -->
+    </footer> 
+     <!-- Контейнер для модального вікна -->
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
