--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
     </header>
 
     <main>
-      <section class="section-page-titel">
+      <!-- <section class="section-page-titel">
         <div class="hero-titel container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-hero">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
-      <!-- <section class="section-two">
+      <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">info</h2>
           <ul class="section-list">
@@ -188,7 +188,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section-team">
         <div class="container">
