--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
           <ul class="icon-list-item">
             <li class="icon-list">
               <img
-                src="./images/img-3.jpg"
+                srcset="./images/img-3@1x.jpg 1x, ./images/img-3.jpg 2x"
+                src="./images/img-3@1x.jpg"
                 width="264"
                 height="260"
                 alt="Product Designer"
@@ -240,6 +241,7 @@
             </li>
             <li class="icon-list">
               <img
+                srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                 src="./images/img-2-2.jpg"
                 width="264"
                 height="260"
@@ -283,7 +285,8 @@
             </li>
             <li class="icon-list">
               <img
-                src="./images/img-1.jpg"
+                srcset="./images/img-1@1x.jpg 1x, ./images/img-1.jpg 2x"
+                src="./images/img-1@1.jpg"
                 width="264"
                 height="260"
                 alt="Marketing"
@@ -328,7 +331,8 @@
 
             <li class="icon-list">
               <img
-                src="./images/img.jpg"
+                srcset="./images/img@1x.jpg 1x, ./images/img.jpg 2x"
+                src="./images/img@1.jpg"
                 width="264"
                 height="260"
                 alt="UI Designer"
@@ -379,7 +383,7 @@
           <ul class="list-portfolio">
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/img-5.jpg"
                   width="360"
                   height="300"
@@ -399,7 +403,7 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/gadjet.jpg"
                   width="360"
                   height="300"
@@ -419,7 +423,7 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/bmakbook.jpg"
                   width="360"
                   height="300"
@@ -439,7 +443,7 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/car.jpg"
                   width="360"
                   height="300"
@@ -459,7 +463,7 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/phon.jpg"
                   width="360"
                   height="300"
@@ -479,7 +483,7 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img
+                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
                   src="./images/smily.jpg"
                   width="360"
                   height="300"
