--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </section> -->
 
-      <section class="section-team">
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="section-titel">Our Team</h2>
 
@@ -375,16 +375,17 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- <section class="section-four">
+      <section class="section-four">
         <div class="container">
           <h2 class="section-titel">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/img-5.jpg"
+                <img
+                  srcset="./images/img-5@1x.jpg 1x, ./images/img-5.jpg 2x"
+                  src="./images/img-5@1x.jpg"
                   width="360"
                   height="300"
                   alt="Banking App"
@@ -403,8 +404,9 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/gadjet.jpg"
+                <img
+                  srcset="./images/gadjet@1x.jpg 1x, ./images/gadjet.jpg 2x"
+                  src="./images/gadjet@1.jpg"
                   width="360"
                   height="300"
                   alt="Cashless Payment"
@@ -416,15 +418,16 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Cashless Payment</h3>
-                <p class="section-text">Marketing</p>
+                <h3 class="section-subtitel-sctf">Cashless Payment</h3>
+                <p class="section-text-sctf">Marketing</p>
               </div>
             </li>
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/bmakbook.jpg"
+                <img
+                  srcset="./images/bmakbook@1x.jpg 1x, ./images/bmakbook.jpg 2x"
+                  src="./images/bmakbook@1.jpg"
                   width="360"
                   height="300"
                   alt="Meditation App"
@@ -443,8 +446,9 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/car.jpg"
+                <img
+                  srcset="./images/car@1x.jpg 1x, ./images/car.jpg 2x"
+                  src="./images/car@1.jpg"
                   width="360"
                   height="300"
                   alt="Taxi Service"
@@ -463,8 +467,9 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/phon.jpg"
+                <img
+                  srcset="./images/phon@1x.jpg 1x, ./images/phon.jpg 2x"
+                  src="./images/phon@1x.jpg"
                   width="360"
                   height="300"
                   alt="Screen Illustrations"
@@ -483,8 +488,9 @@
 
             <li class="item-portfolio">
               <div class="image-container">
-                <img srcset="./images/img-2-2@1x.jpg 1x, ./images/img-2-2.jpg 2x"
-                  src="./images/smily.jpg"
+                <img
+                  srcset="./images/smily@1x.jpg 1x, ./images/smily.jpg 2x"
+                  src="./images/smily@1x.jpg"
                   width="360"
                   height="300"
                   alt="Online Courses"
@@ -502,7 +508,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-container">
