--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-info">
           <a href="./index.html" class="logo footerlogo">
@@ -576,7 +576,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Контейнер для модального вікна -->
     <div class="backdrop hidden">
       <div class="modal">
@@ -598,7 +598,7 @@
                 name="user-name"
               />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-user1"></use>
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
             </div>
           </div>
@@ -614,7 +614,7 @@
                 name="user-phone"
               />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone1"></use>
+                <use href="./images/icons.svg#icon-Vector-1"></use>
               </svg>
             </div>
           </div>
@@ -630,7 +630,7 @@
                 name="user-email"
               />
               <svg class="input-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email2"></use>
+                <use href="./images/icons.svg#icon-Vector-2"></use>
               </svg>
             </div>
           </div>
