--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Banking App</h3>
-                <p class="section-text">App</p>
+                <h3 class="section-subtitel-sctf">Banking App</h3>
+                <p class="section-text-sctf">App</p>
               </div>
             </li>
 
@@ -439,8 +439,8 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Meditation App</h3>
-                <p class="section-text">App</p>
+                <h3 class="section-subtitel-sctf">Meditation App</h3>
+                <p class="section-text-sctf">App</p>
               </div>
             </li>
 
@@ -460,8 +460,8 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Taxi Service</h3>
-                <p class="section-text">Marketing</p>
+                <h3 class="section-subtitel-sctf">Taxi Service</h3>
+                <p class="section-text-sctf">Marketing</p>
               </div>
             </li>
 
@@ -481,8 +481,8 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Screen Illustrations</h3>
-                <p class="section-text">Design</p>
+                <h3 class="section-subtitel-sctf">Screen Illustrations</h3>
+                <p class="section-text-sctf">Design</p>
               </div>
             </li>
 
@@ -502,8 +502,8 @@
                 </p>
               </div>
               <div class="name-application">
-                <h3 class="section-subtitel">Online Courses</h3>
-                <p class="section-text">Marketing</p>
+                <h3 class="section-subtitel-sctf">Online Courses</h3>
+                <p class="section-text-sctf">Marketing</p>
               </div>
             </li>
           </ul>
@@ -523,7 +523,7 @@
         </div>
 
         <div class="footer-social">
-          <p class="social-media">Social media</p>
+          <p class="social-titel">Social media</p>
           <ul class="social-list-footer">
             <li class="social-item">
               <a href="#" class="social-link-footer">
@@ -570,7 +570,7 @@
             <button type="submit" class="form-button">
               Subscribe
               <svg class="btn-footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-telegaram"></use>
+                <use href="./images/icons.svg#telegram"></use>
               </svg>
             </button>
           </form>
