--- a/index.html
+++ b/index.html
@@ -578,14 +578,14 @@
       </div>
     </footer>
     <!-- Контейнер для модального вікна -->
-    <div class="backdrop hidden">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-title">Форма зворотного зв’язку</p>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <!-- Поле Name -->
           <div class="form-field">
