--- a/index.html
+++ b/index.html
@@ -661,8 +661,11 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="#" class="checkbox-link">Privacy Policy</a>
+              <span class="checkbox-link-span">
+                I accept the terms and conditions of the
+
+                <a href="#" class="checkbox-link">Privacy Policy</a>
+              </span>
             </label>
           </div>
 
