--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <!-- Поле Name -->
-          <div class="form-field">
+          <div class="form-field-modal">
             <label class="form-label" for="user-name">Name</label>
             <div class="input-wrapper">
               <input
@@ -604,7 +604,7 @@
           </div>
 
           <!-- Поле Phone -->
-          <div class="form-field">
+          <div class="form-field-modal">
             <label class="form-label" for="user-phone">Phone</label>
             <div class="input-wrapper">
               <input
@@ -620,7 +620,7 @@
           </div>
 
           <!-- Поле Email -->
-          <div class="form-field">
+          <div class="form-field-modal">
             <label class="form-label" for="user-email">Email</label>
             <div class="input-wrapper">
               <input
@@ -636,7 +636,7 @@
           </div>
 
           <!-- Поле Comment -->
-          <div class="form-field comment">
+          <div class="form-field-modal comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
