--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
       </div>
     </footer>
     <!-- Контейнер для модального вікна -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="modal-icon" width="8" height="8">
